# food_saver

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-staging.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
food_saver/food/: models.py
food_saver/food/migrations/: 0001_initial.py  0002_alter_products_category.py
food_saver/food_saver/: asgi.py  settings.py  urls.py  wsgi.py
food_saver/users/: admin.py  models.py
food_saver_app/: manage.py  sample_env
food_saver_app/food/: admin.py  choices.py  models.py  serializers.py  utils.py  views.py
food_saver_app/food/migrations/: 0001_initial.py  0002_alter_products_category.py  0003_alter_meal_category_alter_quantities_measure_and_more.py
food_saver_app/food_saver/: api.py  asgi.py  settings.py  urls.py  wsgi.py
food_saver_app/users/: admin.py  models.py
food_saver_app/users/migrations/: 0001_initial.py
